# raiven

./: .gitignore  Dockerfile  README.md  coulomb_derivation.py  coulomb_sympy.py  flake.nix  hm-module.nix  implementation guide.md  pyproject.toml  raiven.py  rebuild.sh  shell.nix
.roo/: roo-code-settings.json  system-prompt-software-engineer
.roo/rules-software-engineer/: rules.md
documentation/: CONTRIBUTING.md  ROO_CODE_INTEGRATION.md  USAGE.md  implementation guide.md
src/: raiven_mcp.py  raiven_metabolism.py
src/raiven/: __init__.py  raiven_mcp.py  raiven_metabolism.py
utils/: change_neo4j_password.py  profile_latency.py  test_connections.py  test_pipeline.py  verify_metabolism.py
