[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raiven"
version = "0.2.0"
description = "Holographic Cognitive Memory System"
dependencies = [
    "neo4j",
    "requests",
    "numpy",
    "mcp[fastmcp]",
]

[project.scripts]
raiven = "raiven:main"
raiven-mcp = "raiven.raiven_mcp:main"
raiven-metabolism = "raiven.raiven_metabolism:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py"]
